Add HTML comment about Microsoft CMT service to index.html

--- a/index.html
+++ b/index.html
@@ -1,3 +1,8 @@
+<!--
+The Microsoft CMT service was used for managing the peer-reviewing process for this conference.
+This service was provided for free by Microsoft and they bore all expenses, including costs for
+Azure cloud services as well as for software development and support.
+-->
 <!-- CMT-Acknowledgment: This site is intended for a CMT-supported conference -->
 <!DOCTYPE html>
 <html lang="en">
